scripts/nullaway/nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8.txt
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:62: error: [NullAway] initializer method does not guarantee @NonNull fields x (line 16), y (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ECPoint(byte[] bytes, EllipticCurve mother) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:139: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:166: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:179: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:192: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/EllipticCurve.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields order (line 14), generator (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public EllipticCurve(BigInteger a, BigInteger b, BigInteger p) throws InsecureCurveException {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/EllipticCurve.java:135: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/EllipticCurve.java:140: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/RevocationManager.java:101: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.revocList.get(index);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/OpeningManager.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields opk (line 37), osk (line 39) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public OpeningManager(IssuingManager issue, RevocationManager revoc) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/OpeningManager.java:115: error: [NullAway] dereferenced expression mpk is @Nullable
                if (mpk.geth().getx().compareTo(S1.getx()) == 0 && mpk.geth().gety().compareTo(S1.gety()) == 0) {
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/client/User.java:56: error: [NullAway] initializer method does not guarantee @NonNull fields msk (line 39), mpk (line 41) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public User(String pseudo, IssuingManager issue, OpeningManager open, RevocationManager revoc) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/client/User.java:239: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return signature;
        ^
    (see http://t.uber.com/nullaway )
13 errors
